; ModuleID = '/home/carl/AnghaBench/kphp-kdb/image/extr_image-data.c_push_image.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/image/extr_image-data.c_push_image.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.forth_stack = type { i64, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.forth_stack*, i32*)* @push_image to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @push_image(%struct.forth_stack* %0, i32* %1) #0 {
  %3 = alloca %struct.forth_stack*, align 8
  %4 = alloca i32*, align 8
  store %struct.forth_stack* %0, %struct.forth_stack** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load %struct.forth_stack*, %struct.forth_stack** %3, align 8
  %6 = getelementptr inbounds %struct.forth_stack, %struct.forth_stack* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = add i64 %7, 1
  store i64 %8, i64* %6, align 8
  %9 = load %struct.forth_stack*, %struct.forth_stack** %3, align 8
  %10 = getelementptr inbounds %struct.forth_stack, %struct.forth_stack* %9, i32 0, i32 1
  %11 = load i32*, i32** %10, align 8
  %12 = load %struct.forth_stack*, %struct.forth_stack** %3, align 8
  %13 = getelementptr inbounds %struct.forth_stack, %struct.forth_stack* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = getelementptr inbounds i32, i32* %11, i64 %14
  %16 = load i32*, i32** %4, align 8
  %17 = call i32 @new_image(i32* %15, i32* %16)
  ret void
}

declare dso_local i32 @new_image(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
